codex-rs/tui2/src/snapshots/codex_tui__status_indicator_widget__tests__renders_truncated.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
# tui2/src/snapshots/codex_tui__status_indicator_widget__tests__renders_truncated.snap
---
"• Working (0s • esc "
"                    "
